--- a/Documents/Proyectos NetBeans/ValorVenalApp/src/GUI/JFramePrincipal.form
+++ b/Documents/Proyectos NetBeans/ValorVenalApp/src/GUI/JFramePrincipal.form
@@ -96,6 +96,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jtxtMarca">
+      <Events>
+        <EventHandler event="caretUpdate" listener="javax.swing.event.CaretListener" parameters="javax.swing.event.CaretEvent" handler="jtxtMarcaCaretUpdate"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jbtnBuscar">
       <Properties>
@@ -112,6 +115,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jtxtModelo">
+      <Events>
+        <EventHandler event="caretUpdate" listener="javax.swing.event.CaretListener" parameters="javax.swing.event.CaretEvent" handler="jtxtModeloCaretUpdate"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
